Simple ScheduleController tests added Fixed other tests Delete course, delete schedules in edit mode added Schedule filter redone Schedule form options creation passed to schedule.js(except lessonType)